default/objects/Lead/fields/Customer_s_Search_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Search_Request__c</fullName>
    <description>unambiguously to specify by what request the client came to us</description>
    <formula>IF(CONTAINS( LOWER(Utm_term__c), "роснефть"), "Лукойл/Роснефть",
IF(CONTAINS( LOWER(Utm_term__c), "рн"), "Лукойл/Роснефть",
IF(CONTAINS( LOWER(Utm_term__c), "тнк"), "Лукойл/Роснефть",
IF(CONTAINS( LOWER(Utm_term__c), "лукойл"), "Лукойл/Роснефть",
IF(CONTAINS( LOWER(Utm_term__c), "газпром"), "Газпром(ГПН и ГЭС)",
IF(CONTAINS( LOWER(Utm_term__c), "шелл"), "Shell",
IF(CONTAINS( LOWER(Utm_term__c), "shell"), "Shell",
/*IF(CONTAINS( LOWER(Utm_term__c), ""), "Общий",*/
"Общий")))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer's Search Request</label>
    <type>Text</type>
</CustomField>