default/objects/Lead/fields/Data_com_phone__c.field-meta.xml
<CustomField>
    <fullName>Data_com_phone__c</fullName>
    <label>Data.com phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>