default/objects/Lead/fields/Date_of_entry_in_the_state_register__c.field-meta.xml
<CustomField>
    <fullName>Date_of_entry_in_the_state_register__c</fullName>
    <label>Date of entry in the state register</label>
    <type>Date</type>
</CustomField>