default/objects/Lead/fields/Date_of_First_Contact_Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Contact_Inbound_Outbound__c</fullName>
    <description>Date first contact was made with Lead</description>
    <inlineHelpText>Date first contact was made with Lead whether inbound or outbound.</inlineHelpText>
    <label>Date of First Contact: Inbound/Outbound</label>
    <type>Date</type>
</CustomField>