default/objects/Lead/fields/Date_of_First_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Subscription__c</fullName>
    <label>Date of First Subscription</label>
    <length>50</length>
    <type>Text</type>
</CustomField>