default/objects/Lead/fields/Date_of_foundation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_foundation__c</fullName>
    <label>Date of foundation</label>
    <type>Date</type>
</CustomField>