default/objects/Lead/fields/Date_of_Last_Status_Changing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Status_Changing__c</fullName>
    <label>RU_Date of last Status Changing</label>
    <type>Date</type>
</CustomField>