default/objects/Lead/fields/Date_of_request_to_RegionApi__c.field-meta.xml
<CustomField>
    <fullName>Date_of_request_to_RegionApi__c</fullName>
    <label>Date of request to RegionApi</label>
    <type>Date</type>
</CustomField>