default/objects/Lead/fields/Date_Task__c.field-meta.xml
<CustomField>
    <fullName>Date_Task__c</fullName>
    <description>Дата назначения Встречи по спискам КЦ</description>
    <label>Date Task</label>
    <type>Date</type>
</CustomField>