default/objects/Lead/fields/Date_time_of_created__c.field-meta.xml
<CustomField>
    <fullName>Date_time_of_created__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Дата/время создания</label>
    <type>DateTime</type>
</CustomField>