default/objects/Lead/fields/Date_time_recycled__c.field-meta.xml
<CustomField>
    <fullName>Date_time_recycled__c</fullName>
    <label>Date/time recycled</label>
    <type>DateTime</type>
</CustomField>