default/objects/Lead/fields/Date_transfer_old_owner_Lead__c.field-meta.xml
<CustomField>
    <fullName>Date_transfer_old_owner_Lead__c</fullName>
    <label>Date transfer old owner_Lead</label>
    <type>Date</type>
</CustomField>