default/objects/Lead/fields/DateTime_Created__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Created__c</fullName>
    <formula>DATETIMEVALUE(CreatedDate)</formula>
    <label>DateTime Created</label>
    <type>DateTime</type>
</CustomField>