default/objects/Lead/fields/Day_transfer__c.field-meta.xml
<CustomField>
    <fullName>Day_transfer__c</fullName>
    <formula>IF(LastTransferDate&lt;=DATE( 2017, 9, 5) , TransferDate_old_sistem__c, LastTransferDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of transfer</label>
    <type>Date</type>
</CustomField>