default/objects/Lead/fields/Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size__c</fullName>
    <label>Deal Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>