default/objects/Lead/fields/Derzeitige_Zahlungsmethode__c.field-meta.xml
<CustomField>
    <fullName>Derzeitige_Zahlungsmethode__c</fullName>
    <label>Derzeitige Zahlungsmethode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bankkarte</fullName>
            </value>
            <value>
                <fullName>Barzahlung</fullName>
            </value>
            <value>
                <fullName>Kreditkarte</fullName>
            </value>
            <value>
                <fullName>Stationskarte</fullName>
            </value>
            <value>
                <fullName>Tankkarte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>