default/objects/Lead/fields/Desired_services__c.field-meta.xml
<CustomField>
    <fullName>Desired_services__c</fullName>
    <inlineHelpText>Additional services that the Customer wants to have in the future</inlineHelpText>
    <label>Desired services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toll</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>