default/objects/Lead/fields/deviceCategory__c.field-meta.xml
<CustomField>
    <fullName>deviceCategory__c</fullName>
    <description>track_customer</description>
    <label>deviceCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>