default/objects/Lead/fields/Diesel__c.field-meta.xml
<CustomField>
    <fullName>Diesel__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of vehicles if customer uses diesel fuel</description>
    <inlineHelpText>Number of vehicles if customer uses diesel fuel</inlineHelpText>
    <label>Diesel</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>