default/objects/Lead/fields/Difference__c.field-meta.xml
<CustomField>
    <fullName>Difference__c</fullName>
    <description>Отражает разницу в минутах между date of created и first call</description>
    <formula>(First_Call__c -  Date_time_of_created__c)*60*8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>