default/objects/Lead/fields/Digital_Channel__c.field-meta.xml
<CustomField>
    <fullName>Digital_Channel__c</fullName>
    <formula>IF(OR(NOT(ISBLANK(leadcap__Facebook_Lead_ID__c)),
UPPER(Utm_source__c) = 'FACEBOOK'), 'Facebook',
IF(UPPER(Utm_source__c) = 'BING' &amp;&amp; (UPPER(Utm_medium__c) = 'CPC' || UPPER(Utm_medium__c) = 'DISPLAY') &amp;&amp; (CONTAINS(Utm_campaign__c, 'gdn') || CONTAINS(Utm_campaign__c, 'gsp')), 'Bing Display',
IF(UPPER(Utm_source__c) = 'BING' &amp;&amp; (UPPER(Utm_medium__c) = 'CPC' || UPPER(Utm_medium__c) = 'DISPLAY') &amp;&amp; CONTAINS(Utm_campaign__c, 'remarketing'), 'Bing Remarketing',
IF(UPPER(Utm_source__c) = 'BING' &amp;&amp; UPPER(Utm_medium__c) = 'CPC', 'Bing Search',
IF(UPPER(Utm_source__c) = 'GOOGLE' &amp;&amp; (UPPER(Utm_medium__c) = 'CPC' || UPPER(Utm_medium__c) = 'DISPLAY') &amp;&amp; (CONTAINS(Utm_campaign__c, 'gdn') || CONTAINS(Utm_campaign__c, 'gsp')), 'Google Display',
IF(UPPER(Utm_source__c) = 'GOOGLE' &amp;&amp; (UPPER(Utm_medium__c) = 'CPC' || UPPER(Utm_medium__c) = 'DISPLAY') &amp;&amp; CONTAINS(Utm_campaign__c, 'remarketing'), 'Google Remarketing',
IF(UPPER(Utm_source__c) = 'GOOGLE' &amp;&amp; UPPER(Utm_medium__c) = 'CPC', 'Google Search',
IF(UPPER(Utm_source__c) = 'SEZNAM' &amp;&amp; UPPER(Utm_medium__c) = 'CPC', 'Seznam',
IF((CONTAINS(UPPER(Utm_source__c), 'SHELL') &amp;&amp; NOT(CONTAINS(UPPER(Utm_source__c), 'TANK'))) || ISPICKVAL(LeadSource, 'Shell Email'), 'Referral',
IF(OR(UPPER(Utm_source__c) = 'TYPE-IN' , UPPER(Utm_source__c) = 'DIRECT'), 'Direct',

IF(AND(NOT(ISBLANK(Utm_source__c)),
UPPER(Utm_medium__c) != 'ORGANIC',
UPPER(Utm_medium__c) != 'REFERRAL',
UPPER(Utm_source__c) != 'TYPE-IN',
UPPER(Utm_source__c) != 'DIRECT',
ISBLANK(leadcap__Facebook_Lead_ID__c)), 'Other',

IF(ISPICKVAL(LeadSource, 'Inbound Call'), 'Calls',
IF(ISPICKVAL(LeadSource, 'Shell Email'), 'Referral',
IF(ISPICKVAL(LeadSource, 'Inbound Email'), 'Email', 'SEO'))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital Channel</label>
    <type>Text</type>
</CustomField>