default/objects/Lead/fields/Disable_for_Approval_Rate__c.field-meta.xml
<CustomField>
    <fullName>Disable_for_Approval_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable for Approval Rate</label>
    <type>Checkbox</type>
</CustomField>