default/objects/Lead/fields/Disable_for_Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Disable_for_Processing_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable for Processing Time</label>
    <type>Checkbox</type>
</CustomField>