default/objects/Lead/fields/Disable_for_Seek_list__c.field-meta.xml
<CustomField>
    <fullName>Disable_for_Seek_list__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to disable a record from appearing in the IS Seek list</inlineHelpText>
    <label>Disable for Seek list</label>
    <type>Checkbox</type>
</CustomField>