default/objects/Lead/fields/Duplicate_Record_Mark__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Record_Mark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Флаг того что запись помечена как "Дубликат" (есть более актуальный аналог)</description>
    <label>Duplicate Record Mark</label>
    <type>Checkbox</type>
</CustomField>