default/objects/Lead/fields/Duration_work__c.field-meta.xml
<CustomField>
    <fullName>Duration_work__c</fullName>
    <formula>IF(
IF( TEXT( Date_Task__c ) = "", (5 * ( FLOOR( ( TODAY() - DATE( 2015, 1, 5) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 2015, 1, 5), 7 ) ) )
-
(5 * ( FLOOR( ( Day_transfer__c  - DATE( 2015, 1, 5) ) / 7 ) ) + MIN( 5, MOD( Day_transfer__c  - DATE( 2015, 1, 5), 7 ) ) ),
(5 * ( FLOOR( ( TODAY() - DATE( 2015, 1, 5) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 2015, 1, 5), 7 ) ) )
-
(5 * ( FLOOR( ( Date_Task__c - DATE( 2015, 1, 5) ) / 7 ) ) + MIN( 5, MOD( Date_Task__c - DATE( 2015, 1, 5), 7 ) ) )
) &lt; 0, 0, IF( TEXT( Date_Task__c ) = "", (5 * ( FLOOR( ( TODAY() - DATE( 2015, 1, 5) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 2015, 1, 5), 7 ) ) )
-
(5 * ( FLOOR( ( Day_transfer__c  - DATE( 2015, 1, 5) ) / 7 ) ) + MIN( 5, MOD( Day_transfer__c  - DATE( 2015, 1, 5), 7 ) ) ),
(5 * ( FLOOR( ( TODAY() - DATE( 2015, 1, 5) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 2015, 1, 5), 7 ) ) )
-
(5 * ( FLOOR( ( Date_Task__c - DATE( 2015, 1, 5) ) / 7 ) ) + MIN( 5, MOD( Date_Task__c - DATE( 2015, 1, 5), 7 ) ) )
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration of work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>