default/objects/Lead/fields/E2E_Adoption_Status__c.field-meta.xml
<CustomField>
    <fullName>E2E_Adoption_Status__c</fullName>
    <defaultValue>'Manual Process'</defaultValue>
    <label>E2E Adoption Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual Process</fullName>
                <default>true</default>
                <label>Manual Process</label>
            </value>
            <value>
                <fullName>Adoption Email Sent</fullName>
            </value>
            <value>
                <fullName>Successful Adoption</fullName>
            </value>
            <value>
                <fullName>Returned to Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>