default/objects/Lead/fields/E2E_Assistant__c.field-meta.xml
<CustomField>
    <fullName>E2E_Assistant__c</fullName>
    <label>E2E Assistant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>