default/objects/Lead/fields/E2E_Status__c.field-meta.xml
<CustomField>
    <fullName>E2E_Status__c</fullName>
    <label>E2E Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drop off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>