default/objects/Lead/fields/Email_Salutation_FR__c.field-meta.xml
<CustomField>
    <fullName>Email_Salutation_FR__c</fullName>
    <formula>if(ISPICKVAL(Salutation,&quot;Madame&quot;), &quot;Madame&quot;, 
if(ISPICKVAL(Salutation,&quot;Monsieur&quot;), &quot;Monsieur&quot;, 
if(ISPICKVAL(Salutation,&quot;Frau&quot;), &quot;Madame&quot;, 
if(ISPICKVAL(Salutation,&quot;Herr&quot;), &quot;Monsieur&quot;, 
if(ISPICKVAL(Salutation,&quot;Frau Dr.&quot;), &quot;Dr.&quot;, 
if(ISPICKVAL(Salutation,&quot;Herr Dr.&quot;), &quot;Dr.&quot;, 
if(ISPICKVAL(Salutation,&quot;Herr Prof.&quot;), &quot;Prof.&quot;, 
if(ISPICKVAL(Salutation,&quot;Frau Prof.&quot;), &quot;Prof.&quot;, 
&quot;&quot;))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Salutation FR</label>
    <type>Text</type>
</CustomField>