default/objects/Lead/fields/Email_Salutation_NL__c.field-meta.xml
<CustomField>
    <fullName>Email_Salutation_NL__c</fullName>
    <description>Used for LEX Email Templates only, will be replaced/removed in the future hopefully.</description>
    <formula>if(ISPICKVAL(Salutation,&quot;Herr&quot;), &quot;heer&quot;,
if(ISPICKVAL(Salutation,&quot;Herr&quot;), &quot;heer&quot;,
if(ISPICKVAL(Salutation,&quot;Frau&quot;), &quot;mevrouw&quot;,
if(ISPICKVAL(Salutation,&quot;Frau Dr.&quot;), &quot;mevrouw&quot;,
if(ISPICKVAL(Salutation,&quot;Herr Dr.&quot;), &quot;heer&quot;,
if(ISPICKVAL(Salutation,&quot;Herr Prof.&quot;), &quot;heer&quot;,
if(ISPICKVAL(Salutation,&quot;Frau Prof.&quot;), &quot;mevrouw&quot;, &quot;&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Salutation NL</label>
    <type>Text</type>
</CustomField>