default/objects/Lead/fields/Emarsys_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Emarsys_Contact_Id__c</fullName>
    <label>Emarsys Contact Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>