default/objects/Lead/fields/Expected_Volume_Ru__c.field-meta.xml
<CustomField>
    <fullName>Expected_Volume_Ru__c</fullName>
    <formula>IF( AND(!ISNULL(Projected_Liters_month__c), Projected_Liters_month__c != 0) ,
Projected_Liters_month__c,
IF( AND(!ISNULL(Projected_amount_in_rub_month__c), Projected_amount_in_rub_month__c != 0),
ROUND(Projected_amount_in_rub_month__c/45,0),
IF(AND(!ISNULL(Anzahl_PKW__c), Anzahl_PKW__c != 0), Anzahl_PKW__c*143, 0) +
IF(AND(!ISNULL(Anzahl_LKW__c), Anzahl_LKW__c != 0), Anzahl_LKW__c*808, 0)
)
)</formula>
    <label>Expected Volume Ru</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>