default/objects/Lead/fields/F_r_Flexkarte__c.field-meta.xml
<CustomField>
    <fullName>F_r_Flexkarte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Leadtransfer to Flexcard Team</description>
    <label>Für Flexkarte</label>
    <type>Checkbox</type>
</CustomField>