default/objects/Lead/fields/F_r_Shell_Karte__c.field-meta.xml
<CustomField>
    <fullName>F_r_Shell_Karte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Leadtransfer to Shell Card Team</description>
    <label>Für Shell-Karte</label>
    <type>Checkbox</type>
</CustomField>