default/objects/Lead/fields/Facebook_Ad_Id__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Ad_Id__c</fullName>
    <label>Facebook Ad Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>