default/objects/Lead/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Winback Feedback</description>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>