default/objects/Lead/fields/Field_Telematic__c.field-meta.xml
<CustomField>
    <fullName>Field_Telematic__c</fullName>
    <label>Field Telematic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>