default/objects/Lead/fields/FieldSalesTerritory_buddy__c.field-meta.xml
<CustomField>
    <fullName>FieldSalesTerritory_buddy__c</fullName>
    <description>for FieldSalesTerritory</description>
    <label>FieldSalesTerritory_buddy</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>