default/objects/Lead/fields/Firmenname2_Zusatz__c.field-meta.xml
<CustomField>
    <fullName>Firmenname2_Zusatz__c</fullName>
    <label>Firmenname2/Zusatz</label>
    <length>100</length>
    <type>Text</type>
</CustomField>