default/objects/Lead/fields/First_Call_JITB__c.field-meta.xml
<CustomField>
    <fullName>First_Call_JITB__c</fullName>
    <formula>IF  ( ISBLANK (  First_Call__c   ) , 1 , 0 )</formula>
    <label>First Call JITB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>