default/objects/Lead/fields/First_Contact_Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Inbound_Outbound__c</fullName>
    <description>Was first contact inbound from the Lead, or outbound by the sales team?  This is particularly helpful to know when the Lead was included in a marketing campaign.</description>
    <inlineHelpText>Was first contact inbound from the Lead, or outbound by the sales team?  This is particularly helpful to know when the Lead was included in a marketing campaign.</inlineHelpText>
    <label>First Contact: Inbound/Outbound</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Inbound Fax</fullName>
            </value>
            <value>
                <fullName>Inbound Mail</fullName>
            </value>
            <value>
                <fullName>Inbound Website</fullName>
            </value>
            <value>
                <fullName>Onsite Visit</fullName>
            </value>
            <value>
                <fullName>Не контактировали</fullName>
            </value>
            <value>
                <fullName>Inbound SMS</fullName>
            </value>
            <value>
                <fullName>Outbound e-mail</fullName>
            </value>
            <value>
                <fullName>Inbound Banner Ads</fullName>
            </value>
            <value>
                <fullName>Direct App - Fax</fullName>
            </value>
            <value>
                <fullName>Direct App - Web</fullName>
            </value>
            <value>
                <fullName>citypoint</fullName>
            </value>
            <value>
                <fullName>omnicomm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>