default/objects/Lead/fields/Five9_Phone__c.field-meta.xml
<CustomField>
    <fullName>Five9_Phone__c</fullName>
    <label>Five9 (Phone)</label>
    <type>Phone</type>
</CustomField>