default/objects/Lead/fields/Fleet_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Ownership__c</fullName>
    <description>Fleet Ownership (e.g., Own, Lease, Reimburse, Other)</description>
    <inlineHelpText>Fleet Ownership (e.g., Own, Lease, Reimburse, Other)</inlineHelpText>
    <label>Fleet Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Reimburse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>