default/objects/Lead/fields/For_any_corporate_spending__c.field-meta.xml
<CustomField>
    <fullName>For_any_corporate_spending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For any corporate spending</label>
    <type>Checkbox</type>
</CustomField>