default/objects/Lead/fields/Formatted_phones__c.field-meta.xml
<CustomField>
    <fullName>Formatted_phones__c</fullName>
    <label>Formatted phones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>