default/objects/Lead/fields/Fuel_only__c.field-meta.xml
<CustomField>
    <fullName>Fuel_only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Для web лида</description>
    <label>Fuel only</label>
    <type>Checkbox</type>
</CustomField>