default/objects/Lead/fields/Gas_Rus__c.field-meta.xml
<CustomField>
    <fullName>Gas_Rus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if customer uses Gas</description>
    <inlineHelpText>Check if customer uses Gas</inlineHelpText>
    <label>Gas</label>
    <type>Checkbox</type>
</CustomField>