default/objects/Lead/fields/Gasoline__c.field-meta.xml
<CustomField>
    <fullName>Gasoline__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of vehicles if customer uses gasoline</description>
    <inlineHelpText>Number of vehicles if customer uses gasoline</inlineHelpText>
    <label>Gasoline</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>