default/objects/Lead/fields/Geschaeftsbereich__c.field-meta.xml
<CustomField>
    <fullName>Geschaeftsbereich__c</fullName>
    <label>Geschäftsbereich</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Produzierendes Gewerbe</fullName>
            </value>
            <value>
                <fullName>Technische Dienstleistung</fullName>
            </value>
            <value>
                <fullName>Energie-Versorgung</fullName>
            </value>
            <value>
                <fullName>Handwerker (Maler, Lackierer, etc.)</fullName>
            </value>
            <value>
                <fullName>Automobil-Gewerbe (KFZ)</fullName>
            </value>
            <value>
                <fullName>Vertrieb und Beratung</fullName>
            </value>
            <value>
                <fullName>Transport (Fracht)</fullName>
            </value>
            <value>
                <fullName>Transport (Personen)</fullName>
            </value>
            <value>
                <fullName>Soziale Dienstleistung</fullName>
            </value>
            <value>
                <fullName>Verarbeitendes Gewerbe</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>