default/objects/Lead/fields/Gesellschaftsform__c.field-meta.xml
<CustomField>
    <fullName>Gesellschaftsform__c</fullName>
    <label>Gesellschaftsform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>Agency of an Overseas Business</fullName>
            </value>
            <value>
                <fullName>Akciová společnost - a.s.</fullName>
            </value>
            <value>
                <fullName>AöR</fullName>
            </value>
            <value>
                <fullName>Artisans</fullName>
            </value>
            <value>
                <fullName>ASBL</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Association à but lucratif</fullName>
            </value>
            <value>
                <fullName>Association à but non lucratif</fullName>
            </value>
            <value>
                <fullName>Auto entrepreneur</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Behörde</fullName>
            </value>
            <value>
                <fullName>Branch of an Overseas Business</fullName>
            </value>
            <value>
                <fullName>BV</fullName>
            </value>
            <value>
                <fullName>BVBA</fullName>
            </value>
            <value>
                <fullName>Civil Law Partnership</fullName>
            </value>
            <value>
                <fullName>Comm V</fullName>
            </value>
            <value>
                <fullName>Comm VA</fullName>
            </value>
            <value>
                <fullName>Coöperatieve en onderlinge waarborgmaatschappij</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>CVBA</fullName>
            </value>
            <value>
                <fullName>CVOA</fullName>
            </value>
            <value>
                <fullName>e.K</fullName>
            </value>
            <value>
                <fullName>e.U.</fullName>
            </value>
            <value>
                <fullName>e.V.</fullName>
            </value>
            <value>
                <fullName>Eenmanszaak</fullName>
            </value>
            <value>
                <fullName>EESV</fullName>
            </value>
            <value>
                <fullName>eG</fullName>
            </value>
            <value>
                <fullName>EI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>