default/objects/Lead/fields/Hand_Over_JITB__c.field-meta.xml
<CustomField>
    <fullName>Hand_Over_JITB__c</fullName>
    <formula>IF  (  Number_of_days__c &gt;22   , 1 , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hand-Over JITB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>