default/objects/Lead/fields/Handelsregister__c.field-meta.xml
<CustomField>
    <fullName>Handelsregister__c</fullName>
    <label>Handelsregister</label>
    <length>50</length>
    <type>Text</type>
</CustomField>