default/objects/Lead/fields/HasVehicleFleet__c.field-meta.xml
<CustomField>
    <fullName>HasVehicleFleet__c</fullName>
    <label>Has Vehicle Fleet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not defined</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>