default/objects/Lead/fields/How_Heard_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Heard_About_Us__c</fullName>
    <description>Selection made by applicant on website</description>
    <inlineHelpText>Selection made by applicant on website</inlineHelpText>
    <label>How Heard About Us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Automotive Fleet</fullName>
            </value>
            <value>
                <fullName>BP/CITGO/CHEVRON Website</fullName>
            </value>
            <value>
                <fullName>Business Fleet</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Dun &amp; Bradstreet</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Equifax</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Fleet Financials</fullName>
            </value>
            <value>
                <fullName>Fleet Owner</fullName>
            </value>
            <value>
                <fullName>FM Postcard</fullName>
            </value>
            <value>
                <fullName>From a colleague</fullName>
            </value>
            <value>
                <fullName>From a FleetCards USA rep</fullName>
            </value>
            <value>
                <fullName>From a Fuelman merchant</fullName>
            </value>
            <value>
                <fullName>Fueling Station</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Government Fleet</fullName>
            </value>
            <value>
                <fullName>Hoover's</fullName>
            </value>
            <value>
                <fullName>Marketing Campaign</fullName>
            </value>
            <value>
                <fullName>MSN</fullName>
            </value>
            <value>
                <fullName>News article or blog</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>Referral - Employee</fullName>
            </value>
            <value>
                <fullName>Referral - Fueling Station</fullName>
            </value>
            <value>
                <fullName>Referral - Sales Representative</fullName>
            </value>
            <value>
                <fullName>Search Engine - Google/Yahoo/MSN/etc.</fullName>
            </value>
            <value>
                <fullName>Third Party Online Advertising</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>