default/objects/Lead/fields/id_Lead_is_not_case_sensitive__c.field-meta.xml
<CustomField>
    <fullName>id_Lead_is_not_case_sensitive__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id Lead is not case sensitive</label>
    <type>Text</type>
</CustomField>