default/objects/Lead/fields/id_Queue__c.field-meta.xml
<CustomField>
    <fullName>id_Queue__c</fullName>
    <formula>CASESAFEID( Owner:Queue.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id Queue</label>
    <type>Text</type>
</CustomField>