default/objects/Lead/fields/Incorrect_failure__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incorrect failure</label>
    <type>Checkbox</type>
</CustomField>