default/objects/Lead/fields/INN__c.field-meta.xml
<CustomField>
    <fullName>INN__c</fullName>
    <description>Tax Identification Number - For use in Russia</description>
    <inlineHelpText>Tax identification number
        Must contain only numbers:
        Length 12 symbols for PE;
        Length 10 symbols for legal person.</inlineHelpText>
    <label>INN</label>
    <length>14</length>
    <type>Text</type>
</CustomField>